# control-gastos-app

./: .gitignore  LICENSE  README.md
backend/: .gitignore  README.md  README_COMPLETO.md  crear-presentacion.py  main.py  requeriments.txt  telegram_bot.py
backend/api/: __init__.py  auth.py  expenses.py  incomes.py  savings.py  stats.py
backend/core/: __init__.py  config.py  security.py
backend/db/: __init__.py  database.py
backend/models/: __init__.py  models.py  schemas.py
backend/services/: __init__.py  expense_service.py  income_service.py  saving_service.py  user_service.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: MobileLayout.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  CurrencyInput.tsx  Input.tsx  Modal.tsx  Select.tsx  Textarea.tsx
frontend/src/lib/: axios.ts
frontend/src/pages/: DashboardPage.tsx  ExpensesPage.tsx  IncomesPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  SavingsPage.tsx
frontend/src/services/: auth.service.ts  expense.service.ts  income.service.ts  saving.service.ts  stats.service.ts
frontend/src/store/: auth.store.ts
frontend/src/types/: index.ts
mcp/: .gitignore  README.md  pyproject.toml
mcp/src/: api_client.py  server.py  utils.py
